Correct building of tag.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,7 @@ script: echo 'no tests!'
 after_success:
   - docker login -u=driesschulten -e="$DOCKER_USER" -p="$DOCKER_PASS"
   - docker tag $REPO $REPO:latest
-  - if [[ $TRAVIS_TAG ]] docker tag $REPO $REPO:$TRAVIS_TAG fi
+  - if [[ $TRAVIS_TAG ]]; then 
+    docker tag $REPO $REPO:$TRAVIS_TAG
+    fi
   - docker push $REPO
